--- a/package.json
+++ b/package.json
@@ -2,19 +2,13 @@
   "name": "moneymaker-ui",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
-  "keywords": [
-    "react",
-    "expo",
-    "template",
-    "typescript",
-    "nativebase"
-  ],
   "license": "MIT",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build:web": "expo build:web",
     "eject": "expo eject"
   },
   "dependencies": {
@@ -34,10 +28,6 @@
     "@types/react-native": "~0.64.12",
     "typescript": "~4.3.5"
   },
-  "bugs": {
-    "url": "https://github.com/GeekyAnts/nativebase-templates/issues"
-  },
-  "homepage": "https://github.com/GeekyAnts/nativebase-templates#readme",
-  "author": "Aditya Jamuar",
-  "private": true
+  "homepage": "https://moneymaker.ulagellam.com",
+  "author": "Sivayogeith Umamaheswaran"
 }
