--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^44.0.0",
+    "@expo/webpack-config": "^18.1.2",
+    "expo": "^49.0.6",
     "expo-status-bar": "~1.2.0",
     "native-base": "3.4.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "^18.2.0",
+    "react-native": "0.72.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
