--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 16.17.0
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --force
 
       - name: Build Expo web app
         run: npx expo export:web
